refactor : stream의 결과연산을 toList로 하여 리스트가 변경되지 않음을 보여라