@@ -1,7 +1,6 @@
 package racingcar.util.generator;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import racingcar.domain.RacingCar;
 
 public class BasicRacingCarGenerator implements RacingCarGenerator {
@@ -9,6 +8,6 @@ public class BasicRacingCarGenerator implements RacingCarGenerator {
     public List<RacingCar> generateCar(List<String> carNames) {
         return carNames.stream()
                 .map(RacingCar::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
