@@ -2,7 +2,6 @@ package racingcar.util.parser;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BasicRacingCarNameParser implements RacingCarNameParser {
     private static final String CAR_NAME_DELIMITER = ",";
@@ -12,7 +11,7 @@ public class BasicRacingCarNameParser implements RacingCarNameParser {
         String[] splitCarNames = splitCarNames(carNames);
         return Arrays.stream(splitCarNames)
                 .map(this::trimLeadingAndTrailingWhitespace)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String trimLeadingAndTrailingWhitespace(String carName) {
